--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ margin-top:30px;
 </div>
 <div class="container">
 <div class="jumbotron">
-  <h1 class="display-4">Welcome to My Website</h1>
+  <h1 class="display-4">Welcome to My</h1>
   <p class="lead">My name is Rakib Hossain . I am reading and writing with CSE in CIBT , University, </p>
   <hr class="my-4">
   <p>I made this website for myself. In order to know myself and to learn myself, and to check myself, to know how much I can actually do, I want to make myself more ignorant about this. So I am constantly discussing this issue.</p>
